refactor: update Formulario service with edit capability, implement PUT endpoint, and rename "Tudo" to "Todos" for consistency.